--- a/src/app/components/super-admin/categories/speciality/app-speciality-container/app-speciality-container.component.html
+++ b/src/app/components/super-admin/categories/speciality/app-speciality-container/app-speciality-container.component.html
@@ -1,1 +1,80 @@
-<p>app-speciality-container works!</p>
+<div class="row main-container">
+  <!-- <div class="table-container col-lg-12 col-xl-8 col-xxl-8"> -->
+  <div class="table-container col-12">
+    <div class="card">
+      <div class="card-header">
+        <h4 class="card-title">{{ 'categories.specialityTableTitle' | translate }}</h4>
+      </div>
+      <div class="card-body">
+
+        <div class="table-responsive">
+          <div class="input-group mb-3">
+            <button class="btn btn-dark"
+              type="button"
+              id="button-addon1"><i class="fas fa-search"></i></button>
+            <input type="text"
+              class="form-control"
+              placeholder="Buscar subcategoría..."
+              aria-label="Example text with button addon"
+              aria-describedby="button-addon1"
+              (input)="searchFilter($event)">
+          </div>
+
+          <div class="table-paginators-margin">
+            <div>
+              <app-switch-toggle [trueText]="'Más detalles'"
+                [value]="viewTableDetails"
+                (onChangeValue)="viewTableDetails = $event">
+              </app-switch-toggle>
+            </div>
+            <table class="table mb-0 table-hover"
+              style="min-height: 90px;">
+              <thead class="thead-light">
+                <tr>
+                  <th style="max-width: 80px;">#</th>
+                  <th>Nombre</th>
+                  <th>Estado</th>
+                  <th *ngIf="viewTableDetails">Fecha registro</th>
+                  <th *ngIf="viewTableDetails">Creado por:</th>
+                  <th class="text-end">Acción</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  *ngFor="let item of specialityList | paginate: { id: 'subcategory_table', itemsPerPage: 10, currentPage: currentPagePaginator }">
+                  <td scope="row">{{item.id}}</td>
+                  <td>{{item.description}}</td>
+                  <td>
+                    <span [ngClass]="{'bg-success': item.active, 'bg-danger': !item.active}"
+                      class="badge rounded-pill">
+                      {{item.active ? 'Activo' : 'Inactivo'}}
+                    </span>
+                  </td>
+                  <td *ngIf="viewTableDetails">{{ dateformat(item.dateRegister)}}</td>
+                  <td *ngIf="viewTableDetails">{{item.user | uppercase}}</td>
+                  <td class="text-end">
+                    <i (click)="selectSpeciality(item)"
+                      class="fas fa-check-circle font-16"></i>
+                    <i (click)="editSpeciality(item)"
+                      data-bs-toggle="modal"
+                      data-bs-target="#editSubcategory_modal"
+                      class="las la-pen text-secondary font-16"></i>
+
+                    <i (click)="deleteSpeciality(item.id)"
+                      class="las la-trash-alt text-secondary font-16"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <pagination-controls id="subcategory_table"
+              *ngIf="isPaginatorVisible"
+              (pageChange)="currentPagePaginator = $event"
+              previousLabel="Atrás"
+              nextLabel="Sig."></pagination-controls>
+          </div>
+          <app-loading-spinner *ngIf="isLoadingVisible"></app-loading-spinner>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
