--- a/src/app/components/super-admin/categories/subcategory/app-subcategory-form/app-subcategory-form.component.html
+++ b/src/app/components/super-admin/categories/subcategory/app-subcategory-form/app-subcategory-form.component.html
@@ -1,1 +1,49 @@
-<p>app-subcategory-form works!</p>
+<!-- formulario -->
+<div class="col-md-12 col-lg-12">
+  <form [formGroup]="reactiveForm">
+    <div class="mb-3">
+      <label># Categoría</label>
+      <input type="text"
+        class="form-control form-input"
+        [disabled]="true"
+        [value]="selectedSubcategory.id">
+    </div>
+    <div class="mb-3">
+      <label>Usuario (modificando)</label>
+      <input type="text"
+        class="form-control form-input"
+        [disabled]="true"
+        [value]="selectedSubcategory.user | uppercase">
+    </div>
+    <div class="mb-3">
+      <label>Fecha de registro</label>
+      <input type="text"
+        class="form-control form-input"
+        [disabled]="true"
+        [value]="selectedSubcategory.dateRegister">
+    </div>
+    <div class="mb-3">
+      <label>Nombre</label>
+      <input type="text"
+        class="form-control form-input"
+        formControlName="description"
+        [value]="selectedSubcategory.description">
+    </div>
+    <div>
+      <app-switch-toggle [trueText]="'Activo'"
+        formControlName="active"
+        [value]="selectedSubcategory.active"
+        (onChangeValue)="onSwitchValueChange($event)">
+      </app-switch-toggle>
+    </div>
+
+  </form>
+
+  <div class="row">
+    <app-general-buttons [isVisible_clean]="true"
+      [isVisible_save]="true"
+      [isDisabled_save]="!this.reactiveForm.valid"
+      (onClean)="resetForm()"
+      (onSave)="updateCategorySubmit()"></app-general-buttons>
+  </div>
+</div>
