add form branches

--- a/src/app/components/shared/modal/app-modal-action-button/app-modal-action-button.component.html
+++ b/src/app/components/shared/modal/app-modal-action-button/app-modal-action-button.component.html
@@ -1,5 +1,5 @@
 <button type="button"
-  class="btn-md"
+  class="btn-md btnDark"
   [class]="'btn btn-' + buttonStyle"
   data-bs-toggle="modal"
   [attr.data-bs-target]="modalId ? modalId : ''">
