--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -59,8 +59,8 @@
             <div class="d-flex align-items-center">
                 <img src="assets/images/users/user-4.jpg" alt="profile-user" class="rounded-circle me-2 thumb-sm" />
                 <div>
-                    <small class="d-none d-md-block font-11">{{ 'roles.admin' | translate }}</small>
-                    <span class="d-none d-md-block fw-semibold font-12">{{ 'roles.user' | translate }}
+                    <small class="d-none d-md-block font-11">{{ userRole }}</small>
+                    <span class="d-none d-md-block fw-semibold font-12">{{ username }}
                         <i class="mdi mdi-chevron-down"></i></span>
                 </div>
             </div>
