--- a/src/app/pages/super-admin/super-dashboard/super-dashboard.component.html
+++ b/src/app/pages/super-admin/super-dashboard/super-dashboard.component.html
@@ -199,13 +199,13 @@
                 <!-- Tab panes -->
                 <div class="tab-content">
                     <div class="tab-pane p-3 active" id="category" role="tabpanel">
-                        <app-count-categories></app-count-categories>
+                        <!-- <app-count-categories></app-count-categories> -->
                     </div>
                     <div class="tab-pane p-3" id="subcategory" role="tabpanel">
-                        <app-count-subcategories></app-count-subcategories>
+                        <!-- <app-count-subcategories></app-count-subcategories> -->
                     </div>                                                
                     <div class="tab-pane p-3" id="speciality" role="tabpanel">
-                        <app-count-speciality></app-count-speciality>
+                        <!-- <app-count-speciality></app-count-speciality> -->
                     </div>
                 </div>  
                                                      
