--- a/src/app/pages/super-admin/general/types-permits/types-permits.component.html
+++ b/src/app/pages/super-admin/general/types-permits/types-permits.component.html
@@ -8,7 +8,7 @@
                         <li class="breadcrumb-item active">{{ 'menu.home' | translate }}</li>
                     </ol>
                 </div>
-                <h4 class="page-title">{{ 'branch.title' | translate }}</h4>
+                <h4 class="page-title">{{ 'menuSuper.typePermits' | translate }}</h4>
                 <p class="text-muted mb-0">{{ 'menuSuper.typePermits' | translate }}</p>
             </div>
         </div>
