--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,11 @@ body {
   color: #ebc131 !important;
 }
 
+.form-control{
+  border-color: #ebc131 !important;
+  border-radius: 5px;
+}
+
 .form-select {
   border-color: #ebc131 !important;
   border-radius: 5px;
