--- a/src/app/pages/super-admin/general/membership-type/membership-type.component.html
+++ b/src/app/pages/super-admin/general/membership-type/membership-type.component.html
@@ -4,12 +4,12 @@
             <div class="page-title-box">
                 <div class="float-end">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">{{ 'menuSuper.typePermits' | translate }}</a></li>
+                        <li class="breadcrumb-item"><a href="#">{{ 'menuSuper.membershipType' | translate }}</a></li>
                         <li class="breadcrumb-item active">{{ 'menu.home' | translate }}</li>
                     </ol>
                 </div>
-                <h4 class="page-title">{{ 'branch.title' | translate }}</h4>
-                <p class="text-muted mb-0">{{ 'menuSuper.typePermits' | translate }}</p>
+                <h4 class="page-title">{{ 'menuSuper.membershipType' | translate }}</h4>
+                <p class="text-muted mb-0">{{ 'menuSuper.membershipType' | translate }}</p>
             </div>
         </div>
     </div>
