--- a/src/app/pages/super-admin/users/user/user.component.html
+++ b/src/app/pages/super-admin/users/user/user.component.html
@@ -1,1 +1,25 @@
-<p>user works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="page-title-box">
+                <div class="float-end">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">{{ 'menuSuper.typePermits' | translate }}</a></li>
+                        <li class="breadcrumb-item active">{{ 'menu.home' | translate }}</li>
+                    </ol>
+                </div>
+                <h4 class="page-title">{{ 'branch.title' | translate }}</h4>
+                <p class="text-muted mb-0">{{ 'menuSuper.typePermits' | translate }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <!-- <app-city-container></app-city-container> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
