--- a/src/app/components/super-admin/categories/subcategory/app-subcategory-container/app-subcategory-container.component.html
+++ b/src/app/components/super-admin/categories/subcategory/app-subcategory-container/app-subcategory-container.component.html
@@ -21,7 +21,7 @@
 
             <app-modal-action-button [modalId]="'addSubcategory_modal'"
               [buttonStyle]="'primary'"
-              [text]="'Agregar categoría'"
+              [text]="'Agregar subcategoría'"
               [icon]="'fas fa-plus'"
               style="margin-left: 5px;">
             </app-modal-action-button>
@@ -88,7 +88,7 @@
 </div>
 
 <app-modal-container [modalId]="'addSubcategory_modal'"
-  [headerText]="'Agregar categoría'"
+  [headerText]="'Agregar subcategoría'"
   [headerStyle]="'dark'">
   <ng-template>
     <app-subcategory-add-form [originalCategory]="selectedCategory"
