add components and typePermissions

--- a/src/app/pages/super-admin/general/types-permits/types-permits.component.html
+++ b/src/app/pages/super-admin/general/types-permits/types-permits.component.html
@@ -17,7 +17,11 @@
         <div class="col-md-12 col-lg-12">
             <div class="card">
                 <div class="card-body">
-                    <!-- <app-city-container></app-city-container> -->
+                    <div class="row main-container">
+                        <div class="table-container col-lg-12 col-xl-12 col-xxl-12">
+                            <app-type-permission-container></app-type-permission-container>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
