--- a/src/app/pages/super-admin/business/forms-business/forms-business.component.html
+++ b/src/app/pages/super-admin/business/forms-business/forms-business.component.html
@@ -4,22 +4,20 @@
             <div class="page-title-box">
                 <div class="float-end">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">{{ 'menuSuper.typePermits' | translate }}</a></li>
+                        <li class="breadcrumb-item"><a href="#">{{ 'formsBusiness.title' | translate }}</a></li>
                         <li class="breadcrumb-item active">{{ 'menu.home' | translate }}</li>
                     </ol>
                 </div>
-                <h4 class="page-title">{{ 'branch.title' | translate }}</h4>
-                <p class="text-muted mb-0">{{ 'menuSuper.typePermits' | translate }}</p>
+                <h4 class="page-title">{{ 'formsBusiness.title' | translate }}</h4>
+                <p class="text-muted mb-0">{{ 'formsBusiness.title' | translate }}</p>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12 col-lg-12">
-            <div class="card">
-                <div class="card-body">
-                    <!-- <app-city-container></app-city-container> -->
-                </div>
-            </div>
+
+            <app-forms-business-container></app-forms-business-container>
+
         </div>
     </div>
 </div>
