--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
@@ -41,14 +41,12 @@
               style="min-height: 90px;">
               <thead class="thead-light">
                 <tr>
-                  <th style="max-width: 80px;"># Tipo Categoría</th>
+                  <th style="max-width: 80px;">#</th>
                   <th>Nombre</th>
                   <th>Estado</th>
-                  <!-- Your component template -->
-
                   <th *ngIf="viewTableDetails">Fecha registro</th>
                   <th *ngIf="viewTableDetails">Creado por:</th>
-                  <th class="text-end">Acción</th>
+                  <th class="text-end" style="width: 80px;">Acción</th>
                 </tr>
               </thead>
               <tbody>
@@ -56,7 +54,7 @@
                   *ngFor="let item of categoryList | paginate: { id: 'category_table', itemsPerPage: 10, currentPage: currentPagePaginator }">
                   <td scope="row">{{item.id}}</td>
                   <td>{{item.description}}</td>
-                  <td>
+                  <td style="width: 80px;">
                     <span [ngClass]="{'bg-success': item.active, 'bg-danger': !item.active}"
                       class="badge rounded-pill">
                       {{item.active ? 'Activo' : 'Inactivo'}}
