--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
@@ -1,6 +1,6 @@
 <div class="row main-container">
   <!-- <div class="table-container col-lg-12 col-xl-8 col-xxl-8"> -->
-  <div class="table-container col-12">
+  <div class="table-container col-11">
     <div class="card">
       <div class="card-header">
         <h4 class="card-title">{{ 'categories.title1' | translate }}</h4>
@@ -21,7 +21,6 @@
 
             <app-modal-action-button [modalId]="'addCategory_modal'"
               [buttonStyle]="'primary'"
-              [text]="'Agregar categoría'"
               [icon]="'fas fa-plus'"
               style="margin-left: 5px;">
             </app-modal-action-button>
@@ -41,12 +40,13 @@
               style="min-height: 90px;">
               <thead class="thead-light">
                 <tr>
-                  <th style="max-width: 80px;">#</th>
+                  <th style="width: 80px;">#</th>
                   <th>Nombre</th>
                   <th>Estado</th>
                   <th *ngIf="viewTableDetails">Fecha registro</th>
                   <th *ngIf="viewTableDetails">Creado por:</th>
-                  <th class="text-end" style="width: 80px;">Acción</th>
+                  <th class="text-end"
+                    style="width: 80px;">Acción</th>
                 </tr>
               </thead>
               <tbody>
