--- a/src/app/pages/super-admin/categories/categories.component.scss
+++ b/src/app/pages/super-admin/categories/categories.component.scss
@@ -1,5 +1,7 @@
 .tables-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  // grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   background-color: lightgreen;
+  padding: 10px 0;
 }
